css/style.css
/* ... */
@-webkit-keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(0deg);  /* IE 9 */
        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
    }
    100% {
        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(360deg);  /* IE 9 */
        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
    }
}
@keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(0deg);  /* IE 9 */
        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
    }
    100% {
        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(360deg);  /* IE 9 */
        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
    }
}

#loader-wrapper .loader-section {
    position: fixed;
    top: 0;
    width: 51%;
    height: 100%;
    background: #fff;
    z-index: 1000;
    -webkit-transform: translateX(0);  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: translateX(0);  /* IE 9 */
    transform: translateX(0);  /* Firefox 16+, IE 10+, Opera */
}

#loader-wrapper .loader-section.section-left {
    left: 0;
}

#loader-wrapper .loader-section.section-right {
    right: 0;
}

/* Loaded */
.loaded #loader-wrapper .loader-section.section-left {
    -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: translateX(-100%);  /* IE 9 */
    transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */

    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
    transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
}

.loaded #loader-wrapper .loader-section.section-right {
    -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: translateX(100%);  /* IE 9 */
    transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */

    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
    transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
}

.loaded #loader {
    opacity: 0;
    -webkit-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}
.loaded #loader-wrapper {
    visibility: hidden;

    -webkit-transform: translateY(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: translateY(-100%);  /* IE 9 */
    transform: translateY(-100%);  /* Firefox 16+, IE 10+, Opera */

    -webkit-transition: all 0.3s 1s ease-out;
    transition: all 0.3s 1s ease-out;
}

/* JavaScript Turned Off */
.no-js #loader-wrapper {
    display: none;
}



.countdown {
    text-align: center;
    background: rgba(83,129,228,0.10);
    padding: 80px 0;
}
.styled div {
    display: inline-block;
    margin-left: 10px;
    font-size: 70px;
    font-weight: normal;
    text-align: center;
    margin:0 15px;
    padding:0 30px;
    color:#fff;
    text-shadow:none;
    vertical-align: middle;
}
.status-not-available {
	display: inline-block;
    margin-left: 10px;
    color:#ff0000;
    font-size: 15px;
    margin:0 15px;
    padding:0 15px;
}
/* Typography */
h1, h2, h3, h4, h5, h6 {
	margin: 0;
	font-weight: 300;
	font-family: Open Sans, Arial, Helvetica, sans-serif;
	color: #FFFFFF;
	text-align: center;
	text-transform: uppercase;
}
h1 span, h2 span, h3 span, h4 span, h5 span, h6 span, p span {
	font-weight: 700;
}
.main-title {
	margin: 0 auto 15px;
	padding: 19px;
	max-width: 300px;
	border: 1px solid #FFFFFF;
    color: #ffffff;
    z-index:2;
	display: block;
}
a {
	text-decoration: none;
	transition: all linear 0.25s;
	-ms-transition: all linear 0.25s;
	-moz-transition: all linear 0.25s;
	-webkit-transition: all linear 0.25s;
	-o-transition: all linear 0.25s;
}
a:hover, a:focus {
	text-decoration: none;
}
p a {
	color: #FFF;
}
p a:hover {
	color: #333;
}
hr {
	margin: 0;
	padding-bottom: 49px;
	border: 0;
	border-top: 1px dashed rgba(255,255,255,0.5);
	border-bottom: none;
}
.no-margin {
	margin: 0;
}
.margin-bottom {
	margin-bottom: 40px;
}
.lead {
	font-family: Open Sans, Arial, Helvetica, sans-serif;
	text-align: center;
	font-size: 25px;
	color: #ffffff;
    z-index: 2;
}
.hero-unit {
	padding: 50px;
	margin: 2%;
	font-weight: 200;
	background-color: rgba(0,0,0,0.1);
	border-radius: 5px;
}

/* Buttons */
.btn, .btn-primary {
	margin: 0;
	padding: 5px 10px;
	height: 20px;
	background: #FFF;
	border: none;
	border-bottom: 5px solid rgba(0,0,0,0.1);
	border-radius: 0;
	filter: none;
	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
	font: 300 14px/20px Open Sans, Arial, Helvetica, sans-serif;
	color: #333;
	text-shadow: none;
	transition: all linear 0.1s;
	-ms-transition: all linear 0.1s;
	-moz-transition: all linear 0.1s;
	-webkit-transition: all linear 0.1s;
	-o-transition: all linear 0.1s;
}
.btn-primary {
	background: rgba(0,0,0,0.1);
}
.btn-large {
	padding: 10px 20px;
	font-size: 18px;
	border-radius: 0;
}
.btn:hover, .btn:focus, .btn-primary:hover, .btn-primary:focus {
	height: 23px;
	background: rgba(255,255,255,0.9);
	border-bottom: 2px solid rgba(0,0,0,0.15);
	box-shadow: 0 2px 5px rgba(0,0,0,0.25);
	line-height: 23px;
	transition: all linear 0.1s;
	-ms-transition: all linear 0.1s;
	-moz-transition: all linear 0.1s;
	-webkit-transition: all linear 0.1s;
	-o-transition: all linear 0.1s;
}
.btn-primary:hover, .btn-primary:focus {
	background: rgba(0,0,0,0.25);
	border-bottom: 2px solid rgba(0,0,0,0.15);
	box-shadow: 0 2px 5px rgba(0,0,0,0.25);
}


/* banner */


.pic {
    width: 77%;
    height: auto;
    margin: 0 auto 15px 10%;
    padding: 19px;
}

/* Logo */
.logo {
	height: 100px;
	width: 338px;
	line-height: 10%;
	position: absolute;
	top: 1%;
	left: 10px;
	z-index: 2;
}


.logo p {
	margin-bottom:50px;
}
.logo img {
	vertical-align: inherit;
	height: 70%;

}
/* ... */

